Centralización de variables de configuración
Para permitir uso de git tanto en producción como en local sin tener que cambiar cada vez las variables de configuración

--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,9 @@ DB_DATABASE=laravel
 DB_USERNAME=root
 DB_PASSWORD=
 
+CENTRAL_DOMAIN_1=127.0.0.1
+CENTRAL_DOMAIN_2=localhost
+
 CENTRAL_DB_CONNECTION=mysql
 CENTRAL_DB_HOST=127.0.0.1
 CENTRAL_DB_PORT=3306
