--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,5 +26,5 @@ jobs:
             php artisan config:cache
             php artisan view:cache
             php artisan migrate --force
-            npm install
-            npm run build
+#           npm install
+#           npm run build
