Ajustes en script de despliegue y WF

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,18 +21,8 @@ jobs:
           username: ${{ secrets.DEPLOY_USER }}
           key: ${{ secrets.DEPLOY_SSH_KEY }}
           script: |
+            echo "Iniciando despliegue..."
             echo "Abriendo directorio del proyecto..."
+            git config --global --add safe.directory /var/www/laravel
             cd /var/www/laravel
-            echo "Haciendo pull de la última versión desde repositorio..."
-            git pull origin main
-            echo "Instalando dependencias de PHP..."
-            composer install --no-interaction --prefer-dist --optimize-autoloader
-            echo "Limpiando cache..."
-            php artisan optimize:clear
-            echo "Ejecutando migraciones..."
-            php artisan migrate --force
-            echo "Instalando dependencias de Node.js..."
-            /root/.nvm/versions/node/v20.17.0/bin/npm install
-            echo "Compilando assets..."
-            /root/.nvm/versions/node/v20.17.0/bin/npm run build
-            echo "Despliegue completado."
+            ./deploy.sh
