Se incluye PATH de node
Ya que npm falla al no detectar el PATH de node en la sesión del WF

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,6 +23,7 @@ jobs:
           script: |
             echo "Iniciando despliegue..."
             echo "Abriendo directorio del proyecto..."
+            export PATH="/home/tis2/.nvm/versions/node/v20.19.1/bin:$PATH"
             git config --global --add safe.directory /var/www/laravel
             cd /var/www/laravel
             chmod +x deploy.sh
