--- a/.env.example
+++ b/.env.example
@@ -40,13 +40,13 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=mailpit
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="hello@example.com"
-MAIL_FROM_NAME="${APP_NAME}"
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USERNAME=soporte.abogasense@gmail.com
+MAIL_PASSWORD='cxli zfwz kbrt xiop'
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS=soporte.abogasense@gmail.com
+MAIL_FROM_NAME="AbogaSense"
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
