Se actualiza .gitignore
Se agregan directorios de imágenes de tenants (about, banner, logo, y services) a .gitignore. Lo anterior, para evitar problemas en producción al reconocer como cambios cualquier actualización de logo o imagen desde la interfaz web de cada tenant.

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,10 @@
 /node_modules
 /public/build
 /public/hot
+/public/images/about
+/public/images/banner
+/public/images/logo
+/public/images/services
 /public/storage
 /public/tenancy
 /storage/*.key
