--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 /public/images/about
 /public/images/banner
 /public/images/logo
+/public/images/products
 /public/images/services
 /public/storage
 /public/tenancy
